src/main/fabric8/scasffold-deployment.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
    name: scaffold
spec:
    replicas: 1
    strategy:
      rollingParams:
        timeoutSeconds: 10800
      type: Rolling
    template:
      metadata:
        labels:
          app: scaffold
          deploymentconfig: scaffold
      spec:
        containers:
        - env:
          - name: KUBERNETES_NAMESPACE
            valueFrom:
              fieldRef:
                fieldPath: metadata.namespace
          - name: JAVA_APP_DIR
            value: /deployments
          - name: JAVA_OPTIONS
            value: -Xms256m -Xmx5128m
          - name: MAVEN_CLEAR_REPO
            value: "true"
          - name: JAVA_DEBUG
            value: "true"
          - name: JAVA_DEBUG_PORT
            value: "6666"
          - name: GC_MAX_METASPACE_SIZE
            value: "512"
          name: scaffold
          image: scaffold:latest
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /scaffold/infra/health/
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          resources:
            limits:
              memory: "1024Mi"
              cpu: 512m
            requests:
              cpu: 256m
              memory: "512Mi"
          securityContext:
            privileged: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - scaffold
        from:
          kind: ImageStreamTag
          name: scaffold:latest
      type: ImageChange
