src/main/fabric8/scaffold-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: scaffold
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    deploymentconfig: scaffold
  type: LoadBalancer
