src/main/fabric8/scasffold-route.yml
apiVersion: v1
kind: Route
metadata:
  name: scaffold
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: scaffold
